hphp/hack/test/typecheck/coeffects/write_props/class_method_write_error.php.exp
File "class_method_write_error.php", line 10, characters 5-23:
Writing to object properties requires the capability WriteProperty, which is not provided by the context (Parsing[1002])
File "class_method_write_error.php", line 10, characters 5-19:
This object's property is being mutated (used as an lvalue)
Setting non-mutable object properties requires the capability WriteProperty, which is not provided by the context. (Typing[4401])
  File "class_method_write_error.php", line 9, characters 32-33:
  The local (enclosing) context provides the capability set {}
